versioned_docs/version-1.5.0/user-guide/agents-protocols/partner-integrations.md
---
sidebar_position: 16
---

# Partner Integrations

Below is a short list of companies who actively offer and maintain integrations with OpenRemote. We refer to their documentation and the original protocol it's based on.

As we are 100% open source we invite other companies to develop an integration. To be listed we only expect maintenance of these integrations. You can always [contact us](https://openremote.io/contact/) to get going.

## Teltonika Networks 
![TELTONIKA-NETWORKS](img/teltonika-networks.png)

[Teltonika Networks](https://teltonika-networks.com/?utm_source=iotplatform&utm_medium=referral&utm_content=openremote) offers a range of network products such as gateways, routers, modems and switches. With in-house R&D as well manufacturing facilities, it offers industrial grade solutions. Their solutions connect easily with OpenRemote, e.g. using the MQTT broker.

Documentation: 
- [Teltonika Wiki - Integrating with OpenRemote](https://wiki.teltonika-networks.com/view/OpenRemote?utm_source=partner&utm_medium=referral&utm_campaign=teltonika-networks-openremote-wiki)
- [OpenRemote Documentation - Manager APIs - MQTT Broker](../manager-apis.md#mqtt-api-mqtt-broker)

## Teltonika Vehicle Telematics
![TELTONIKA-Telematics](img/teltonika-telematics.png)

[Teltonika Telematics](https://teltonika-gps.com/?utm_source=iotplatform&utm_medium=referral&utm_content=openremote) offers a range of vehicle telematics devices, like GPS trackers for road and sea vehicles, and more. With in-house R&D as well manufacturing facilities, it offers industrial grade solutions for any sort of fleet management requirement. Teltonika Telematics products can be connected seamlessly with OpenRemote, with industry-first complete, automatic payload recognition and full support for all Teltonika Telematics devices.

Documentation: 
- [Teltonika Fleet Management with OpenRemote](https://wiki.teltonika-gps.com/view/OpenRemote_with_Fleet_Management_(FM))
- [OpenRemote - Fleet Management - Wiki](https://github.com/openremote/fleet-management/wiki)
